Please fix the border issue on mobile, all widths max at 92% save for html and body

--- a/jaya.css
+++ b/jaya.css
@@ -1,5 +1,7 @@
 
- 
+*{
+    max-width: 92%;
+} 
   
 html{
     font-family: 'Vollkorn', serif;
@@ -12,9 +14,12 @@ html{
 
 body{
     margin: 0;
-    max-width: 92%;
+    max-width: 100%;
     margin: 0 auto;
+    overflow-x: hidden;
 }
+
+
 /* Means everything in header displays as inline block. */
 header *{
     display: inline-block;
